auto-test/tests/chapter_15/invalid_types/extra_credit/postfix_incr_nested_array.c


int main(void) {
    int arr[2][3] = {{1, 2, 3}, {4, 5, 6}};
    arr[2]++;
    return 0;
}